Fixed about me alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ a:hover {
 }
 
 .about-me {
+    text-align: center;
     margin: auto 710px;
     color: #40514E
 }
